# My-Hermes-Desktop

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HARNESS_SETUP.md  LICENSE  NOTICE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json  settings.local.json
.cursor/rules/: karpathy-guidelines.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.harness/: SESSION_END.md  SESSION_START.md
.harness/hooks/: commit-msg  guard-dangerous.sh  post-write.sh  session-end-codex.sh  session-end.sh  session-start.sh
.harness/product/: backlog.md
.harness/registry/: _index.md
.harness/state/: constraints.md  current-sprint.md  features.json
.opencode/plugin/: harness-opencode-plugin.ts
docs/: dashboard-theme-sync.md  harness-project-management-design.md  hermes-desktop-product-plan-v3.md  hermes-desktop-product-plan.md  product-design-ux-analysis.md  product-roadmap-v2.md  strategy-and-roadmap-v2.md
skills/: ai-interface-design.SKILL.md  ai-interface-design.skill
src/: App.tsx  appMenu.test.ts  appMenu.ts  index.css  types.ts  windowControls.test.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/dashboard-themes/: apple-dark.yaml  warp.yaml
src-tauri/src/: lib.rs  stream.rs
src-tauri/src/commands/: background.rs  chat.rs  dashboard.rs  files.rs  memory.rs  mod.rs  sessions.rs  settings.rs  setup.rs  snapshot.rs  terminal.rs  tray.rs
(+52 files in other folders)
