[package]
name = "hermes-desktop"
version = "0.1.0"
description = "A beautiful desktop UI for Hermes Agent"
authors = ["Wu Guirong <wuguirong@gmail.com>"]
license = "Apache-2.0"
repository = "https://gitee.com/wuguirong/hermes-desktop"
edition = "2024"

[lib]
name = "hermes_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
portable-pty = "0.9"
base64 = "0.22"
rusqlite = "0.32"
serde_yaml = "0.9.34"
window-vibrancy = "0.7.1"
